[gd_scene load_steps=12 format=2]

[ext_resource path="res://Resources/Art/Slime/slime_idle.png" type="Texture" id=1]
[ext_resource path="res://Resources/Scenes/Slime/SlimeMaterial.tres" type="Material" id=2]
[ext_resource path="res://Resources/UI/Scenarios/Allels.gd" type="Script" id=3]
[ext_resource path="res://Resources/UI/ThemeMAIN.tres" type="Theme" id=4]

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 1 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 1 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 1 )
region = Rect2( 80, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=28]
animations = [ {
"frames": [ SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ) ],
"loop": true,
"name": "default",
"speed": 7.02
} ]

[node name="Allels" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 304, -96 )
theme = ExtResource( 4 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Theory" type="Panel" parent="."]
margin_right = 624.0
margin_bottom = 424.0
rect_pivot_offset = Vector2( -456, -16 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Theory"]
margin_left = 8.0
margin_top = 8.0
margin_right = 118.0
margin_bottom = 28.0
rect_scale = Vector2( 1.2, 1.2 )
text = "Alleles"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="Theory"]
margin_left = 16.0
margin_top = 40.0
margin_right = 600.0
margin_bottom = 106.0
text = "Two, similar slimes can have different sizes. Those two slimes have different variations of the same trait."
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="Theory"]
margin_left = 16.0
margin_top = 152.0
margin_right = 608.0
margin_bottom = 218.0
text = "An allel is a variant form of a gene. In this case, this two slimes have different allels for their size gene."
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label4" type="Label" parent="Theory"]
margin_left = 16.0
margin_top = 208.0
margin_right = 608.0
margin_bottom = 320.0
text = "Allels can be recessive or dominant. Dominant allels menifest phenotypically and a gene that is not revealing is a recessive one. 
"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label5" type="Label" parent="Theory"]
margin_left = 16.0
margin_top = 280.0
margin_right = 608.0
margin_bottom = 392.0
text = "Each slime has a pair of allels. Having two same allels means, that the slime is homozygote. Having two different - slime is heterozygote."
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthySlime" type="AnimatedSprite" parent="Theory"]
material = ExtResource( 2 )
position = Vector2( 228, 104 )
scale = Vector2( 4.5, 4.5 )
frames = SubResource( 28 )
playing = true

[node name="HealthySlime2" type="AnimatedSprite" parent="Theory"]
material = ExtResource( 2 )
position = Vector2( 340, 96 )
scale = Vector2( 6, 6 )
frames = SubResource( 28 )
frame = 5
playing = true

[node name="ExcersiseButton" type="Button" parent="Theory"]
margin_left = 200.0
margin_top = 352.0
margin_right = 364.0
margin_bottom = 382.0
text = "Let's Excersise!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ReturnButton" type="Button" parent="Theory"]
margin_left = 16.0
margin_top = 384.0
margin_right = 92.0
margin_bottom = 414.0
text = "Scenarios"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Excercise" type="Panel" parent="."]
visible = false
margin_right = 624.0
margin_bottom = 424.0
rect_pivot_offset = Vector2( -456, -16 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Excercise"]
margin_left = 8.0
margin_top = 8.0
margin_right = 118.0
margin_bottom = 28.0
rect_scale = Vector2( 1.2, 1.2 )
text = "Allels - The Excersise"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="Excercise"]
margin_left = 16.0
margin_top = 40.0
margin_right = 608.0
margin_bottom = 106.0
text = "Here you have some allel pairs. Try to assign correct names for each of the pair. Capital letter means a dominant allele. "
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="Excercise"]
margin_left = 64.0
margin_top = 128.0
margin_right = 152.0
margin_bottom = 152.0
text = "AA"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AA" type="OptionButton" parent="Excercise/Label3"]
margin_left = 224.0
margin_top = -8.0
margin_right = 464.0
margin_bottom = 22.0
theme = ExtResource( 4 )
text = "Heterozygote"
items = [ "Heterozygote", null, false, 0, null, "Dominant Homozygote", null, false, 1, null, "Recessive Homozygote", null, false, 2, null ]
selected = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label6" type="Label" parent="Excercise"]
margin_left = 64.0
margin_top = 168.0
margin_right = 184.0
margin_bottom = 192.0
text = "Aa"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Aa" type="OptionButton" parent="Excercise/Label6"]
margin_left = 224.0
margin_top = -8.0
margin_right = 464.0
margin_bottom = 22.0
theme = ExtResource( 4 )
text = "Heterozygote"
items = [ "Heterozygote", null, false, 0, null, "Dominant Homozygote", null, false, 1, null, "Recessive Homozygote", null, false, 2, null ]
selected = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label7" type="Label" parent="Excercise"]
margin_left = 64.0
margin_top = 208.0
margin_right = 184.0
margin_bottom = 232.0
text = "aa"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="aa" type="OptionButton" parent="Excercise/Label7"]
margin_left = 224.0
margin_top = -8.0
margin_right = 464.0
margin_bottom = 22.0
theme = ExtResource( 4 )
text = "Heterozygote"
items = [ "Heterozygote", null, false, 0, null, "Dominant Homozygote", null, false, 1, null, "Recessive Homozygote", null, false, 2, null ]
selected = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label8" type="Label" parent="Excercise"]
margin_left = 64.0
margin_top = 248.0
margin_right = 184.0
margin_bottom = 272.0
text = "Ba"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ba" type="OptionButton" parent="Excercise/Label8"]
margin_left = 224.0
margin_top = -8.0
margin_right = 464.0
margin_bottom = 22.0
theme = ExtResource( 4 )
text = "Heterozygote"
items = [ "Heterozygote", null, false, 0, null, "Dominant Homozygote", null, false, 1, null, "Recessive Homozygote", null, false, 2, null ]
selected = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label9" type="Label" parent="Excercise"]
margin_left = 64.0
margin_top = 288.0
margin_right = 328.0
margin_bottom = 331.0
text = "AB"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AB" type="OptionButton" parent="Excercise/Label9"]
margin_left = 224.0
margin_top = -8.0
margin_right = 464.0
margin_bottom = 22.0
theme = ExtResource( 4 )
text = "Heterozygote"
items = [ "Heterozygote", null, false, 0, null, "Dominant Homozygote", null, false, 1, null, "Recessive Homozygote", null, false, 2, null ]
selected = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckAnswerB" type="Button" parent="Excercise"]
margin_left = 200.0
margin_top = 352.0
margin_right = 364.0
margin_bottom = 382.0
text = "Check Answer"

[node name="ReturnButton" type="Button" parent="Excercise"]
margin_left = 16.0
margin_top = 384.0
margin_right = 92.0
margin_bottom = 414.0
text = "Scenarios"

[node name="TheoryButton" type="Button" parent="Excercise"]
margin_left = 512.0
margin_top = 384.0
margin_right = 612.0
margin_bottom = 414.0
text = "Return"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Theory/ExcersiseButton" to="." method="_on_ExcersiseButton_pressed"]
[connection signal="pressed" from="Theory/ReturnButton" to="." method="_on_ReturnButton_pressed"]
[connection signal="pressed" from="Excercise/CheckAnswerB" to="." method="_on_CheckAnswerB_pressed"]
[connection signal="pressed" from="Excercise/ReturnButton" to="." method="_on_ReturnButton_pressed"]
[connection signal="pressed" from="Excercise/TheoryButton" to="." method="_on_TheoryButton_pressed"]
